# uber-trip-duration

./: LICENSE  Makefile  README.md  pyproject.toml
uber_trip_duration/: __init__.py  dataset.py  features.py  plots.py
uber_trip_duration/modeling/: predict.py  train.py
